# wtf

./: README.md  pyproject.toml
tests/: test_cli.py  test_config.py  test_history.py  test_providers.py
wtf/: __init__.py  cli.py  config.py  config_cmd.py  history.py  providers.py  setup.py
